--- a/boxx.css
+++ b/boxx.css
@@ -1,21 +1,29 @@
 .box-1{
     background-color: burlywood;
+    height: 100px;
+    width: 100px;
     padding: 10px;
     border: 1px  solid gray;
     box-sizing: border-box;
 }
 .box-2{
     background-color:tan;
+    height: 100px;
+    width: 100px;
     padding: 15px;
     border: 1px solid teal;
     box-sizing: border-box;
 }
 .box-3{
     background-color:beige;
+    height: 100px;
+    width: 100px;
     padding: 15px;
     border: 1px solid teal;
     box-sizing: border-box;
 }
-/* body{
-    background-color:burlywood;
-} */
+
+
+body{
+    background-color:coral;
+}
